utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/DuplicateIdentifierModule.ide
package valid

typedef module DuplicateIdentifierModule {
    module identifier: CommonModule
}
