utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/DuplicateIdentifierConfiguration.ide
package invalid

typedef configuration DuplicateIdentifierConfiguration {
    configuration identifier: CommonConfiguration {

    }

    configuration identifier: CommonConfiguration {

    }
}
